--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 /*Global ===========================*/
 :root {
     --dark-blue: #363f5f;
+    --green: #49aa26;
+    --lightgreen: #3dd705;
+    --red: #e92929;
 }
 
 * {
@@ -9,10 +12,26 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 93.75%; /* 15px */
+}
+
 body {
     
-    background-color: ghostwhite;
-    font-family: 'Poppins';
+    background-color: ghostwhite; 
+    font-family: 'Poppins', sans-serif
+}
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
 }
 
 .container {
@@ -28,6 +47,61 @@ h2 {
     color: var(--dark-blue);
     font-weight: normal;
 }
+
+/*Links & Buttons ===========================*/
+a {
+    color: var(--green);
+    text-decoration: none;
+
+}
+a:hover {
+    color: var(--lightgreen);
+
+}
+
+button {
+    width: 100%;
+    height: 50px;
+
+    border: none;
+
+    color:white;
+    background: var(--green);
+
+    padding: 0;
+    
+    border-radius: 0.25rem;
+    cursor: pointer;
+}
+
+button:hover {
+    background: var(--lightgreen);
+}
+
+.button.new {
+    display: inline-block;
+    margin-bottom: .8rem;
+}
+
+.button.cancel {
+    color: var(--red);
+    border: 2px var(--red) solid;
+    border-radius: 0.25rem;
+
+    height: 50px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    opacity: 0.6;
+}
+
+.button.cancel:hover {
+    opacity: 1;
+}
+
+
 /*Header ===========================*/
 header {
     background: #2d4a22;
@@ -62,6 +136,10 @@ header {
 .card h3 {
     font-weight: normal;
     font-size: 1rem;
+
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
 }
 .card p {
     font-size: 2rem;
@@ -69,15 +147,31 @@ header {
     margin-top: 1rem;
 }
 .card.total {
-    background: #49aa26;
+    background: var(--green);
     color: white;
 }
 
 /*Table ===========================*/
+#transition {
+    display: block;
+    width: 100%;
+    overflow: auto;
+}
+
 #data-table {
     width: 100%;
     border-spacing: 0 0.5rem;
-    color: #969cb3
+    color: #969cb3;
+}
+
+table thead tr th:first-child, 
+table tbody tr td:first-child {
+    border-radius: 0.25rem 0 0 0.25rem;
+}
+
+table thead tr th:last-child, 
+table tbody tr td:last-child {
+    border-radius: 0 0.25rem 0.25rem 0;
 }
 
 table th {
@@ -97,11 +191,6 @@ table tbody tr:hover {
     opacity: 1;
 }
 
-table thead tr th:first-child, 
-table tbody tr td:first-child {
-    border-radius: 0.5rem 0 0 0.25rem;
-}
-
 table td {
     background: white;
     padding: 1rem 2rem;
@@ -115,7 +204,77 @@ td.income {
 }
 
 td.expense {
-    color: #e92929;
+    color: var(--red);
+}
+
+/*Modal ===========================*/
+.modal-overlay {
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba(0, 0, 0, 0.7);
+
+    position: fixed;
+    top: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    opacity: 0;
+    visibility: hidden;
+    
+    z-index: 999;
+}
+
+.modal-overlay.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+.modal {
+    background: #f0f2f5;
+    padding: 2.4rem;
+    
+    position: relative;
+    z-index: 1;
+}
+
+/*Form ===========================*/
+#form {
+    max-width: 500px;
+}
+
+#form h2 {
+    margin-top: 0;
+}
+
+input {
+    border: none;
+    border-radius: 0.2rem;
+    
+    padding: 0.8rem;
+
+    width: 100%;
+}
+
+.input-group {
+    margin-top: 0.8rem;
+}
+
+.input-group small {
+    opacity: 0.4;
+}
+
+.input-group.actions {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.input-group.actions .button,
+.input-group.actions button {
+    width: 48%;
 }
 
 /*Footer ===========================*/
@@ -123,5 +282,22 @@ footer {
     text-align: center;
     padding: 4rem 0 2rem;
     color: var(--dark-blue);
+
     opacity: 0.6;
 }
+
+/*Responsive ===========================*/
+@media (min-width: 800px) {
+    html{
+        font-size: 87.5%;
+    }
+
+    #balance {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+    }
+
+
+}
+
